# rhapsode

./: .gitignore  CLAUDE.md
backend/: README.md  alembic.ini  pyproject.toml  rhapsode-sidecar.spec
backend/alembic/: env.py
backend/alembic/versions/: 60085f3c84a1_add_media_cue_points.py  9306b49e8942_initial_schema.py  a1f2c3d4e5f6_add_attempt_review_snapshot.py  b7c8d9e0f1a2_add_collections.py  c8d9e0f1a2b3_add_personal_notes.py  d9e0f1a2b3c4_add_fsrs_review_logs.py  e0f1a2b3c4d5_add_source_reference_labels.py  f1a2b3c4d5e6_add_acquisition_state_and_retry_provenance.py
backend/scripts/: align_reference_audio.py  backfill_junctures.py  backfill_source_references.py  import_meter.py  import_reference_audio.py  optimize_fsrs.py  provision_iliad_11_20.py  retokenize_japanese_ruby.py  seed_test_passage.py
backend/src/rhapsode/: __init__.py  app.py  cli.py  config.py  database.py  desktop.py  idempotency.py  migrations.py  models.py  resources.py  schemas.py  seed.py
backend/src/rhapsode/api/: deps.py  router.py
backend/src/rhapsode/corpora/: __init__.py  iliad.py
backend/src/rhapsode/services/: backup.py  collections.py  furigana.py  media.py  notes.py  passages.py  planning.py  plugins.py  prep.py  scheduling.py  sessions.py
backend/tests/: conftest.py  test_api.py  test_contract.py  test_desktop.py  test_domain.py  test_iliad_corpus.py  test_migrations.py  test_workflow.py
contracts/: README.md  openapi.json
data/: rhapsode.db
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: .gitkeep
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
memory-bank/: activeContext.md  decisions-grill-2026-06-10.md  (+5 more)
(+106 files in other folders)
