[project]
name = "rhapsode"
version = "0.1.0"
description = "Local-first backend for structured oral memorization"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.18,<1.19",
  "fastapi>=0.136,<0.137",
  "fsrs>=6.3,<6.4",
  "fugashi>=1.4,<2",
  "google-genai>=2.8.0",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<0.1",
  "sqlalchemy>=2.0.50,<2.1",
  "unidic-lite>=1.0,<2",
  "uvicorn[standard]>=0.35,<0.36",
]

[project.scripts]
rhapsode = "rhapsode.cli:main"
rhapsode-migrate = "rhapsode.migrations:main"

[dependency-groups]
dev = [
  "httpx>=0.28,<0.29",
  "mypy>=1.17,<2",
  "pyinstaller>=6.14,<7",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rhapsode"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = false

