[package]
name = "rhapsode"
version = "0.0.1"
description = "Rhapsode desktop shell"
authors = ["Arman Tarkhanian"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
ureq = { version = "2", default-features = false, features = ["tls"] }
